fix:realign images on main page to be responsive

--- a/assets/style.css
+++ b/assets/style.css
@@ -84,6 +84,7 @@ main {
     background-color: rgb(245, 238, 238);
     color: #857f80;
     margin-top: 85px;
+    overflow: auto;
 }
 
 .hero-image {
@@ -119,8 +120,8 @@ main {
 .img-container {
     position: absolute;
     display: flex;
-    display: flex;
     width: 100%;
+    height: 100%;
     padding: 2rem;
     flex-direction: row;
     flex-wrap: wrap;
@@ -129,22 +130,41 @@ main {
 
     .local-img {
         background: url(.//images/farmer-1487769.webp) no-repeat center center / cover;
-        height: 40%;
-        width: 85%;
+
     }
 
     .loyalty-img {
         background: url(.//images/loyalty-card.webp) no-repeat center center / cover;
-        height: 40%;
-        width: 85%;
+
     }
 
     .coffee-img {
         background: url(.//images/coffee-beans.webp) no-repeat center center / cover;
-        height: 40%;
-        width: 85%;
+
     }
+
+    .local-img,
+    .loyalty-img,
+    .coffee-img {
+        border-radius: 50%;
+        max-width: 300px;
+        max-height: 300px;
+        height: 90vw;
+        width: 90vw;
+        margin-bottom: 20px;
+    }
+
+    .img-text {
+        text-align: center;
+        position: absolute;
+        color: white;
+        font-weight: 900;
+        padding: 150px 150px;
+    }
+
+
 }
+
 
 /* Footer Style */
 footer {
@@ -195,6 +215,16 @@ footer {
 
     main {
         margin-top: 144px;
+    }
+
+    .local-img,
+    .loyalty-img,
+    .coffee-img {
+        position: relative;
+    }
+
+    .img-container {
+        justify-content: space-between;
     }
 }
 
